--- a/templates/chat-tabs.hbs
+++ b/templates/chat-tabs.hbs
@@ -1,7 +1,7 @@
 <nav class="tabs">
     {{!-- OOC 分頁：固定存在，點擊時不切換場景，但過濾無 Token 發言 --}}
     <a class="item {{#if (eq activeTab 'ooc')}}active{{/if}}" data-tab="ooc">
-        <i class="fas fa-comment-slash"></i> OOC
+        <i class="fas fa-comment-slash"></i> {{localize 'YCIO.Tabs.OOC'}}
     </a>
 
     {{!-- 場景分頁：動態生成 --}}
