--- a/templates/avatar-selector.hbs
+++ b/templates/avatar-selector.hbs
@@ -5,7 +5,7 @@
             <i class="fas fa-plus"></i> {{localize "YCIO.Avatar.Add"}}
         </button>
         <div class="info">
-            {{localize "YCIO.Avatar.Managing"}}: <strong>{{targetName}}</strong>
+            {{localize "YCIO.Avatar.Managing"}} <strong>{{targetName}}</strong>
         </div>
     </header>
 
