--- a/styles/module.css
+++ b/styles/module.css
@@ -68,7 +68,7 @@
     border-radius: 4px;
     color: #fff;
     font-weight: bold;
-    border-right: 1px solid #EE0;
+    border-right: 2px outset #EE3;
 }
 
 /* =========================================================
