--- a/styles/module.css
+++ b/styles/module.css
@@ -87,7 +87,7 @@
 }
 
 /* 訊息列表容器 (ul/ol) */
-#custom-chat-log {
+.YCIO-floating-chat-window .chat-log {
     flex: 1;
     overflow-y: auto;   /* 必須要有 auto，捲動條才會出現 */
     height: 100%;       /* 確保高度被撐滿 */
@@ -164,7 +164,22 @@
 
 /* 單純的擲骰圖片或表情符號垂直置中 */
 .YCIO-floating-chat-window .chat-message .message-content img {
-    vertical-align: middle;
+    vertical-align: top;
+}
+
+/* 訊息內顯示的擲骰樣式 */
+.YCIO-floating-chat-window .chat-message .message-content .dice-roll {
+    min-width: 100px;
+}
+.YCIO-floating-chat-window .chat-message .message-content .dice-roll .dice-formula {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+/* 訊息內容，主要寫用來插入圖片表符等 */
+.YCIO-floating-chat-window .chat-message .message-content {
+    display: flex;
+    align-items: bottom;
 }
 
 /* --- 特殊訊息類型 (配色區) --- */
@@ -266,11 +281,54 @@
 }
 
 /* 頭像按鈕的 Tooltip，因為不依附在模組的視窗內，必須獨立指定 */
-.ycio-avatar-tooltip {
+.YCIO-avatar-tooltip {
     transition-delay: 0s !important;   /* 移除顯示延遲，雖然好像沒卵用 */
 }
 
+/* 聊天輸入框文字格式按鈕 */
+.YCIO-floating-chat-window .chat-input-area .chat-toolbar {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 2px 5px;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 4px 4px 0 0; /* 上方圓角 */
+    margin-bottom: 0;
+}
 
+.YCIO-floating-chat-window .chat-input-area .chat-toolbar button {
+    color: var(--color-text-light-highlight);
+    cursor: pointer;
+    padding: 0px 0px;
+    height: 24px;
+    width: 24px;
+    line-height: 24px;
+}
+
+.YCIO-floating-chat-window .chat-input-area .chat-toolbar button:hover {
+    color: var(--color-text-light-heading);
+    text-shadow: 0 0 5px var(--color-shadow-primary);
+}
+
+.YCIO-floating-chat-window .chat-input-area .chat-toolbar #chat-text-color-picker {
+    background: none;
+    color: var(--color-text-light-highlight);
+    cursor: pointer;
+    padding: 0px 0px;
+    height: 24px;
+    width: 24px;
+    line-height: 24px;
+}
+
+.YCIO-floating-chat-window .chat-input-area .chat-toolbar #chat-text-color-picker::-webkit-color-swatch-wrapper {
+    padding: 0;
+}
+
+.YCIO-floating-chat-window .chat-input-area .chat-toolbar #chat-text-color-picker::-webkit-color-swatch {
+    border: none;
+}
+
+/* 聊天輸入框 */
 .YCIO-floating-chat-window .chat-input-area {
     padding: 0px;
     padding-top: 2px;
@@ -309,6 +367,8 @@
     width: 100%;
     display: flex;
     align-items: flex-end; /* 讓按鈕跟隨輸入框底部對齊 */
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 /* 文字輸入框 (Textarea) */
