試圖優化切換分頁的效能

--- a/templates/chat-input.hbs
+++ b/templates/chat-input.hbs
@@ -34,7 +34,7 @@
     </div>
 
     <div class="input-wrapper">
-        <textarea id="chat-message-input" name="message" placeholder="{{localize 'YCIO.Input.Placeholder'}}"></textarea>
+        <textarea id="chat-message-input" name="message" placeholder="{{localize 'YCIO.Input.Placeholder'}}">{{draftContent}}</textarea>
         <button id="chat-send-btn" type="button" aria-label="{{localize 'YCIO.Input.Send'}}">
             <i class="fas fa-paper-plane"></i>
             <span>{{localize 'YCIO.Input.Send'}}</span>
