--- a/templates/chat-editor.hbs
+++ b/templates/chat-editor.hbs
@@ -1,6 +1,6 @@
-<footer class="chat-input-area YCIO-message-editor">
+<footer class="chat-input-area YCIO-message-editor-container">
     {{! 工具列復用，保留原本的 data-action }}
-    <div class="chat-toolbar" style="justify-content: flex-end; margin-bottom: 5px;">
+    <div class="chat-toolbar">
         <button type="button" data-action="formatBold" title={{localize 'YCIO.Input.Bold'}}><i class="fas fa-bold"></i></button>
         <button type="button" data-action="formatItalic" title={{localize 'YCIO.Input.Italic'}}><i class="fas fa-italic"></i></button>
         <button type="button" data-action="formatStrikethrough" title={{localize 'YCIO.Input.Strikethrough'}}><i class="fas fa-strikethrough"></i></button>
@@ -17,11 +17,11 @@
 
     {{! 輸入框class="YCIO-chat-entry" }}
     <div class="input-wrapper">
-        <textarea class="YCIO-chat-entry" name="content" style="min-height: 100px;">{{originalContent}}</textarea>
+        <textarea class="YCIO-chat-entry" name="content">{{originalContent}}</textarea>
     </div>
 
     {{! 底部按鈕區 }}
-    <div class="form-footer" style="display: flex; gap: 5px; margin-top: 5px;">
+    <div class="form-footer">
         <button type="button" data-action="cancel" style="flex: 1;">
             <i class="fas fa-times"></i> {{localize 'Cancel'}}
         </button>
