--- a/templates/chat-input.hbs
+++ b/templates/chat-input.hbs
@@ -18,6 +18,12 @@
 
         {{! 文字格式按鈕 }}
         <div class="chat-toolbar">
+            {{#if isGM}}
+            <button type="button" data-action="exportLog" title="{{localize 'YCIO.Input.ExportLog'}}">
+                <i class="fas fa-file-export"></i>
+            </button>
+            {{/if}}
+            
             <button type="button" data-action="formatBold" title={{localize 'YCIO.Input.Bold'}}><i class="fas fa-bold"></i></button>
             <button type="button" data-action="formatItalic" title={{localize 'YCIO.Input.Italic'}}><i class="fas fa-italic"></i></button>
             <button type="button" data-action="formatStrikethrough" title={{localize 'YCIO.Input.Strikethrough'}}><i class="fas fa-strikethrough"></i></button>
