--- a/templates/chat-window.hbs
+++ b/templates/chat-window.hbs
@@ -1,9 +1,7 @@
 <section class="chat-content">
     {{! 顯示訊息的主要區塊 }}
     <ol id="custom-chat-log" class="chat-log">
-        {{#each messages}}
-            {{{this.html}}}
-        {{/each}}
+        {{! 留空，用 JS 的 appendChild 注入帶有事件的 DOM 元素 }}
     </ol>
     {{! 回到底部的按鈕}}
     <button type="button" class="jump-to-bottom" data-action="jumpToBottom" aria-label="Jump to Bottom">
