再一次處理各系統的訊息互動相容

--- a/templates/chat-window.hbs
+++ b/templates/chat-window.hbs
@@ -1,6 +1,6 @@
 <section class="chat-content">
     {{! 顯示訊息的主要區塊 }}
-    <ol id="custom-chat-log" class="chat-log">
+    <ol id="custom-chat-log" class="chat-log chat-sidebar">
         {{! 留空，用 JS 的 appendChild 注入帶有事件的 DOM 元素 }}
     </ol>
     {{! 回到底部的按鈕}}
